Fix display of event's name, localStorage size limit and add gif sync
Event's name where display with html encoding.
Localstorage would "break" when reaching 5MB. So now we purge history progressively if needed.
The gif of tsumugi is in gif with if the radio is played or not.

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,9 @@
   background: transparent;
 }
 
-.Radio-image {
+.Radio-image .ff-canvas,
+.Radio-image .ff-image {
   border-radius: 50px !important;
-  background-size: cover !important;
 }
 
 /* RadioPlayer component */
