--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import '~antd/dist/antd.css';
 
+/*
+   Ideally the color and magic number should come from AntD framework.
+   However, for the moment there is no less integration, so I put them manually.
+*/
+
 #root {
   height: 100%;
   background:#F0F2F5;
@@ -33,6 +38,12 @@
 .PreviousSongList-search {
   width: 200px;
   margin-bottom: 8px;
+}
+
+.EventCountdown .ant-statistic-content{
+  display: inline-block ;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.65);
 }
 
 /* VolumeIcon component */
